verticale align center fix for tile

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -47,6 +47,9 @@
   display: flex;
   position: relative;
   overflow: hidden;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
 }
 
 .card {
